# Ecommerce

./: Makefile  README.md  pyproject.toml
backend/application/contracts/: __init__.py  controller.py  repository.py  streamer.py
backend/application/contracts/schemas/: __init__.py  new_product.py
backend/application/exceptions/: __init__.py
backend/application/schemas/: __init__.py
backend/application/schemas/crud/: __init__.py  update_client.py
backend/application/schemas/entities/: __init__.py  client.py  order.py  payment.py  product.py
backend/application/schemas/query/: __init__.py  client.py  order.py  product.py
backend/application/services/: __init__.py  auth.py  client.py  email.py  order.py  payment.py  product.py
backend/domain/contracts/: __init__.py  storage.py
backend/domain/contracts/entities/: __init__.py  client.py  order.py  payment.py  product.py  user.py
backend/domain/contracts/schemas/: __init__.py  token.py  (+3 more)
backend/domain/exceptions/: __init__.py  auth.py  checkout.py  common.py  payment.py  product.py
backend/domain/schemas/: __init__.py  new_client.py  new_order.py  new_product.py  token.py
backend/helpers/: constants.py  date.py
backend/infrastructure/contracts/: __init__.py
backend/infrastructure/schemas/: __init__.py  payment.py
tests/: conftest.py
tests/factories/: __init__.py
tests/factories/client/: __init__.py  create.py  model.py
tests/factories/order/: __init__.py  create.py  model.py
tests/factories/payment/: __init__.py  payment_info.py
tests/factories/product/: __init__.py  create.py  model.py
(+53 files in other folders)
